# knowledge_base_builder

./: .gitignore  API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  FAQ.md  IMPLEMENTATION_SUMMARY.md  Install-PortableRust.bat  LICENSE  Portable-Rust-Shell.bat  README.md  SECURITY.md  TROUBLESHOOTING.md  install-portable-rust.sh  pyproject.toml  requirements.in  requirements.txt  sbom.json
.claude/: launch.json
.githooks/: pre-commit
.github/workflows/: build-xapian-wheels.yml  publish.yml  sbom.yml
launcher/: Cargo.toml  README.md  tauri.conf.json
launcher/public/: index.html
launcher/src/: main.rs
scripts/: generate_sbom.py  sync_version.py
src/knowledge_base_builder/: __init__.py  archive_index.py  base.py  cli.py  os_utils.py  presentation.py  web.py  wiki_orchestrator.py
src/knowledge_base_builder/buckets/: __init__.py  usb.py  zim.py
src/knowledge_base_builder/engines/: __init__.py  archive.py  wikipedia.py
tests/: __init__.py  test_cli_wheel_provisioning.py  test_os_utils.py  test_robustness.py  test_wiki_fts_overlay.py
